--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,35 @@
-/* Styles go here */
+body{
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+.container{
+  display: flex;
+  justify-content: space-between;
+  height: 60px;
+}
+.img{
+  flex-shrink: 0;
+  margin: auto 0 auto 50px;
+}
+
+
+.nav{
+  display: flex;
+  flex-shrink: 0;
+  margin-right: 40px;
+}
+.nav_linc{
+  display:flex;
+  color: black;
+  text-decoration: none;
+  text-transform: uppercase;
+  /* margin: auto; */
+  padding: 22.5px 10px;
+}
+
+
+.nav_linc:hover{
+  color: #00ACDC;
+  border-bottom: 4px solid #00ACDC;
+}
